<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Activity Recognition</string>

    <!-- Main Activity -->
    <string name="logo_title">On-Device Activity Recognizer</string>
    <string name="title_screen_option_text"> In Collect Example Data you can collect raw acceleration data which will be saved on the phone and can be used to train a model. You can either train a new model or use an already trained model. If you use this app for the first time there is no pre trained model and the kNN and TL model will behave randomly.</string>
    <string name="BtnPreTrainedModel">Use a pre trained model</string>
    <string name="BtnTrainNewModel">Train a new model</string>
    <string name="title_screen_option_text_2">You can also create a confusion matrix for the pre trained model or load the last model which was trained in "Train a New Model" and did not overwrite the pre trained model.</string>
    <string name="BtnCreateConfusionMatrix">Create Confusion Matrix</string>
    <string name="BtnLastTrainedModel">Use last trained model</string>
    <string name="BtnCollectExampleData">Collect Example Data</string>

    <!-- CollectData -->
    <string name="EnterActivityText">1) Select the activity you want to record:</string>
    <string name="StartCollectingData">2) Press the "Collect Data" Button. It starts after 3 seconds to give you some time to put the mobile phone at the correct spot.</string>
    <string name="BtnCollectData">Collect Data</string>
    <string name="BtnStopCollectingData">Stop Collecting Data</string>
    <string name="InstanceText">Every activity needs at least 5 instances. The array below depicts the number of instances for each activity and follows the same order as the dropdown menu.</string>
    <string name="EmptyInstanceText">[ ]</string>
    <string name="InfoForCollectingData">When the Stop Collecting Data button is pressed the last second of the recorded acceleration values will be deleted. This is because of the movement the user does when stopping the recording which is not related to the activity.</string>
    <string name="SaveExampleDataText">Pressing the button below overwrites the old raw acceleration files if the instance counter for the activity is bigger than 0.</string>
    <string name="SaveExampleDataBtn">Save Example Data</string>

    <!-- TrainNewModel -->
    <string name="TextLoadExampleData">1) The collected data gets loaded and the instance counter below will update, when its fully loaded.</string>
    <string name="TrainingText">2) Press the button below to start the training.</string>
    <string name="BtnStartTraining">Start Training</string>
    <string name="BtnStopTraining">Stop Training</string>
    <string name="Loss">Loss: %.4f</string>
    <string name="SaveAsPreTrainedModel">Save As Pre Trained Model</string>
    <string name="OR">OR</string>
    <string name="UseNewTrainedModel">Use New Trained Model</string>


    <!-- Create Confusion Matrix -->
    <string name="instanceConfusionMatrix">The array below depicts how many instances you collected for each activity.</string>
    <string name="CalculateConfusionMatrix">Press the button below to calculate the confusion matrix. The pre trained model will be used.</string>
    <string name="BtnCalcConfusionMatrix">Calculate Confusion Matrix</string>
    <string name="TextLoadLastConfusionMatrix">Or you can load the last calculated confusion matrix.</string>
    <string name="BtnLoadLastConfMatrix">Load Last Confusion Matrix</string>
    <string name="BtnLoadLastRecordedData">Load Last Recorded Data</string>


    <!-- Show Confusion Matrix -->
    <string name="ShowKNNMatrix"> Show kNN Confusion Matrix</string>
    <string name="ShowGenericMatrix"> Show Generic Model Confusion Matrix</string>
    <string name="ShowTLMatrix"> Show TL Model Confusion Matrix</string>





    <string name="MissingFeatureMatrix">Feature Matrix could not be loaded</string>













    <string name="BtnSaveNewTrainedModelPreTrainedModel">Save as Pre Trained Model</string>
    <string name="explanationGenericModelRunning">The generic model has no activity running, but it has in between activities like STAND_TO_SIT or SIT_TO_LIE. The sum of all those in between activities is summed up and displayed as the running activity.</string>


    <!-- IMPORTANT: THIS LIST HAS TO FOLLOW THE LIST IN TransferLearningModelWrapper.java, OTHERWISE THE PROGRAM WONT WORK PROPERLY-->
    <string-array name="class_array">
        <item>Walking</item>
        <item>Upstairs</item>
        <item>Downstairs</item>
        <item>Sitting</item>
        <item>Standing</item>
        <item>Laying</item>
        <item>Running</item>
    </string-array>

</resources>