<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".TrainNewModel">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6sp"
        android:layout_weight="0"
        android:text="@string/TextLoadExampleData"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        app:cardBackgroundColor="@color/buttonBackground"
        app:cardCornerRadius="4dp"/>

    <TextView
        android:id="@+id/instancesTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/EmptyInstanceText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6sp"
        android:layout_weight="0"
        android:text="@string/TrainingText"
        android:textSize="18sp" />

    <Button
        android:id="@+id/trainingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:backgroundTint="@color/buttonBackground"
        android:minHeight="64dip"
        android:onClick="startTraining"
        android:text="@string/BtnStartTraining"
        android:textColor="@color/text_colour" />

    <TextView
        android:id="@+id/lossTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6sp"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/Loss"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/saveAsPreTrainedModelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonBackground"
            android:minHeight="64dip"
            android:onClick="saveAsPreTrainedModel"
            android:text="@string/SaveAsPreTrainedModel"
            android:textColor="@color/text_colour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/OR"
            android:textSize="16sp" />

        <Button
            android:id="@+id/useNewTrainedModelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonBackground"
            android:minHeight="64dip"
            android:onClick="useNewTrainedModel"
            android:text="@string/UseNewTrainedModel"
            android:textColor="@color/text_colour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</LinearLayout>