<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".TrainNewModel">


    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif"
        android:text="@string/EnterActivityText"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        app:cardBackgroundColor="@color/buttonBackground"
        app:cardCornerRadius="4dp">

        <Spinner
            android:id="@+id/change_class_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:popupBackground="@color/buttonBackground" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif"
        android:text="@string/StartCollectingData"
        android:textSize="18sp" />

    <Button
        android:id="@+id/collectingDataButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:backgroundTint="@color/buttonBackground"
        android:minHeight="64dip"
        android:onClick="startCollectingData"
        android:text="@string/BtnStartCollectingData" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/instanceConfusionMatrix"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/instancesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:layout_weight="0"
        android:gravity="center"
        android:text="[ ]"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6sp"
        android:layout_weight="0"
        android:text="@string/CalculateConfusionMatrix"
        android:textSize="18sp" />

    <Button
        android:id="@+id/trainingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:backgroundTint="@color/buttonBackground"
        android:minHeight="64dip"
        android:onClick="calculateConfusionMatrix"
        android:text="@string/BtnCalcConfusionMatrix" />

</LinearLayout>