<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShowConfusionMatrix">

    <GridLayout
        android:id="@+id/MyGridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/buttonBackground"
        android:minHeight="54dip"
        android:onClick="showKNNConfusionMatrix"
        android:text="@string/ShowKNNMatrix" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="@color/buttonBackground"
        android:minHeight="54dip"
        android:onClick="showGenericConfusionMatrix"
        android:text="@string/ShowGenericMatrix" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="@color/buttonBackground"
        android:minHeight="54dip"
        android:onClick="showTLConfusionMatrix"
        android:text="@string/ShowTLMatrix" />


</LinearLayout>